[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/transforms/clip_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/slider_slot.tscn" type="PackedScene" id=3]

[node name="Clip" type="GraphNode"]
margin_right = 171.0
margin_bottom = 74.0
title = "NODE_CLIP_TITLE"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_CLIP_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 245.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="Input" type="Label" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 245.0
margin_bottom = 53.0
hint_tooltip = "NODE_INPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_INPUT_PORT"

[node name="RangeFrom" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 54.0
margin_right = 245.0
margin_bottom = 68.0
type = 7
label = "NODE_RANGE_FROM_PORT"
tooltip = "NODE_RANGE_FROM_PORT_TTIP"
nullable = false

[node name="RangeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 83.0
type = 8
label = "NODE_RANGE_LEN_PORT"
tooltip = "NODE_RANGE_LEN_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[connection signal="value_changed" from="RangeFrom" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength" to="." method="_on_RangeLength_value_changed"]
